solc_mutator_ossfuzz_seed_corpus/test_sol/test_f4f666e450556613067b052a2d9819c2505aa500797bf39ee820b3d613fe0000_fc007cbee8909f9c4e40733427d59434fd6995c0_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bool i0,bytes memory i1)  returns(bool o0,uint64 o1,bool o2,function () external o3)
{
  {

  }

  {


  }
}
function f1(int112 i0,int168 i1)  returns(bytes31 o0,bool o1)
{
  i1 ^= (116069818873438462616682053059106503766088630132638 - (-138907368061442088532176183817777975147740003540161 / -78300618871043688073790245595430976867031974105577));
  {



  }
  {

{



  {




  }
}
  }


}
pragma abicoder v1;
pragma solidity >= 0.0.0;
// ----
// TypeError 7366: (su0.sol:187-357): Operator ^= not compatible with types int168 and rational_const 9088...(92 digits omitted)...1965 / 7830...(42 digits omitted)...5577
